# simple-marlowe

./: hie.yaml  simple-marlowe.cabal
