cabal-version:          >=1.10
name:                   simple-marlowe
version:                0.1.0.0
author:                 Andres Loeh, Lars Bruenjes
maintainer:             andres@well-typed.com, brunjlar@gmail.com
build-type:             Simple

library
    exposed-modules:    DSLs
                      , DSLs2
                      , Prop
                      , Combined
                      , Marlowe0
                      , Marlowe1
                      , Marlowe
                      , Sim
                      , Static
                      , Examples
    hs-source-dirs:     src

    build-depends:      base >=4.14 && <4.15
                      , containers
                      , mtl
                      , QuickCheck
                      , random
    default-language:   Haskell2010
    ghc-options:        -Wall
